[gd_scene load_steps=4 format=3 uid="uid://d0g33o7j5rca1"]

[ext_resource type="ArrayMesh" uid="uid://bmnxvjr2ka08e" path="res://assets/Test_assets/tres_file(fichier_ressources)/goutte.tres" id="1_b46j0"]
[ext_resource type="Script" path="res://goutte_ploc.gd" id="1_r80g8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nehal"]
height = 1.0

[node name="Goutte_ploc" type="Area3D"]
gravity_point = true
script = ExtResource("1_r80g8")

[node name="Mesh_goutte" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = ExtResource("1_b46j0")
skeleton = NodePath("")

[node name="Collision_goutte" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_nehal")

[node name="Son_goutte" type="AudioStreamPlayer3D" parent="."]

[node name="End_Drop" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="finished" from="Son_goutte" to="." method="_on_son_goutte_finished"]
[connection signal="timeout" from="End_Drop" to="." method="_on_end_drop_timeout"]
